[package]
name = "ipfs-embed-net"
version = "0.11.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "small embeddable ipfs implementation"
repository = "https://github.com/ipfs-rust/ipfs-embed"

[dependencies]
anyhow = "1.0.38"
async-global-executor = "2.0.2"
fnv = "1.0.7"
futures = "0.3.12"
ip_network = "0.3.4"
libipld = { version = "0.10.0", default-features = false }
bitswap = { version = "0.1.0", path = "../bitswap" }
libp2p-rs = { git = "https://github.com/kingwel-xie/libp2p-rs.git", branch = "master", default-features = true }
names = "0.11.0"
prometheus = "0.11.0"
thiserror = "1.0.23"
tracing = "0.1.23"
void = "1.0.2"
